tests/cudn_test_2/ns_and_cudn.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: red-namespace
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
---
apiVersion: v1
kind: Namespace
metadata:
  name: blue-namespace
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
---
apiVersion: v1
kind: Namespace
metadata:
  name: green-namespace
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
---
apiVersion: v1
kind: Namespace
metadata:
  name: yellow-namespace
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
---
# cudn selects all namespaces, all of them have the required label to define ns as a udn
apiVersion: k8s.ovn.org/v1
kind: ClusterUserDefinedNetwork
metadata:
  name: entire-cluster-cudn
spec:
  namespaceSelector: {}
  network:
    topology: Layer2
    layer2:
      role: Primary
      ipam:
        lifecycle: Persistent
      subnets:
        - 203.203.0.0/16
